update: layout and router

--- a/src/component/GlobalStyle/GlobalStyle.scss
+++ b/src/component/GlobalStyle/GlobalStyle.scss
@@ -1,1 +1,19 @@
-@import 'nomalize.css';
+@import 'normalize.css';
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+:root {
+    --primaty: #fe2c55;
+}
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    // font-optical-sizing: auto;
+    font-size: 1.6rem;
+    line-height: 1.5;
+    text-rendering: optimizespeed;
+    font-style: normal;
+}
