--- a/src/component/GlobalStyle/GlobalStyle.scss
+++ b/src/component/GlobalStyle/GlobalStyle.scss
@@ -2,7 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-    --primaty: #fe2c55;
+    --primary: #fe2c55;
+    --black: #000;
+    --text-color: #333;
+
+    --default-layout-header-height: 60px;
+    --default-layout-width: 1150px;
 }
 
 * {
@@ -22,4 +27,14 @@ body {
     line-height: 1.5;
     text-rendering: optimizespeed;
     font-style: normal;
+}
+
+button, input, [tabindex] {
+    outline: none;
+    border: none;
+}
+
+a[href] {
+    color: var(--text-color);
+    text-decoration: none;
 }
