--- a/src/component/Button/Button.module.scss
+++ b/src/component/Button/Button.module.scss
@@ -18,15 +18,21 @@
     }
 
     &.disabled {
-        //cursor: not-allowed;
-        pointer-events: none;
+        cursor: not-allowed;
+        // pointer-events: none;
         opacity: 0.5;
     }
 }
 
 .icon + .title, .title + .icon {
     margin-left: 8px;
-}   
+}
+
+.icon {
+    display: inline-block;
+    width: 24px;
+    text-align: center;
+}
 
 .rounded {
     border-radius: 999px;
