update: ui header avt & icon

--- a/src/component/Button/Button.module.scss
+++ b/src/component/Button/Button.module.scss
@@ -5,15 +5,16 @@
     min-width: 100px;
     padding: 9px 16px;
     border-radius: 4px;
-    
+
     font-size: 1.6rem;
     font-weight: 700;
+    font-family: 'ProximaNova', sans-serif;
     cursor: pointer;
     background-color: var(--white);
     border: 1px solid transparent;
     user-select: none;
 
-    + .wrapper{
+    + .wrapper {
         margin-left: 8px;
     }
 
@@ -24,7 +25,8 @@
     }
 }
 
-.icon + .title, .title + .icon {
+.icon + .title,
+.title + .icon {
     margin-left: 8px;
 }
 
@@ -50,16 +52,12 @@
     background-color: var(--primary);
     border-color: var(--primary);
 
-     &:hover {
-        background: linear-gradient(
-            0deg,
-            rgba(0, 0, 0, 0.06),
-            rgba(0, 0, 0, 0.06)
-        ), #fe2c55;
+    &:hover {
+        background: linear-gradient(0deg, rgba(0, 0, 0, 0.06), rgba(0, 0, 0, 0.06)), #fe2c55;
     }
 }
 
-.outline{
+.outline {
     color: var(--primary);
     border-color: currentColor;
 
@@ -68,8 +66,6 @@
         background: rgba(254, 44, 85, 0.06);
     }
 }
-
-
 
 .text {
     &:hover {
