--- a/src/component/GlobalStyle/GlobalStyle.scss
+++ b/src/component/GlobalStyle/GlobalStyle.scss
@@ -5,7 +5,7 @@
     --primary: #fe2c55;
     --black: #000;
     --text-color: #333;
-    --white: #161823;
+    --white: #ffffff;
 
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
@@ -23,7 +23,7 @@ html {
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'ProximaNova', sans-serif;
     // font-optical-sizing: auto;
     font-size: 1.6rem;
     line-height: 1.5;
@@ -41,6 +41,24 @@ input,
 a[href] {
     color: var(--text-color);
     text-decoration: none;
+}
+
+@font-face {
+    font-family: ProximaNova;
+    src: url('../../acsets/fonts/TikTokFont-Regular.woff2') format('woff2');
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: ProximaNova;
+    src: url('../../acsets/fonts/TikTokFont-Semibold.woff2') format('woff2');
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: ProximaNova;
+    src: url('../../acsets/fonts/TikTokFont-Bold.woff2') format('woff2');
+    font-weight: 700;
 }
 
 body {
